# SCAII

./: .gitignore  Cargo.toml  LICENSE  README.md  cfg.toml  install_mac.sh
analysis/: Q&A_test.py  core_test.py  explan_test.py  extract_question_keys.py  extractionMap.py  flatten.py  flattenTest.py  gameboard_test.py  logEntry.txt  log_check.py  logs_check.py  navigation_test.py  newlines_check.py  non_interactive_test.py  q_and_a_test.py  read_answer_file.py
backend/: Cargo.toml  build.rs
backend/lua/: random_towers.lua  tower_example.lua
backend/src/: lib.rs  protos.rs
backend/src/engine/: mod.rs
backend/src/engine/components/: collision.rs  mod.rs  move_component.rs
backend/src/engine/resources/: collision.rs  mod.rs
backend/src/engine/systems/: attack.rs  cleanup.rs  collision.rs  input.rs  mod.rs  movement.rs  proto_render.rs  state.rs
backend/src/engine/systems/lua/: mod.rs  userdata.rs
backend/src/engine/systems/serde/: de.rs  de_collision.rs  mod.rs  ser.rs
backend/src/util/: mod.rs
backends/sky-rts/: Cargo.toml  build.rs
backends/sky-rts/demos/: agent_layers_multi.py  random_towers.py  record_agent.py  record_city.py  record_multi_step.py  tower_agent.py  viz_agent.py
backends/sky-rts/examples/: tower_example.rs
backends/sky-rts/glue/python/: __init__.py
backends/sky-rts/glue/python/env/: action.py
backends/sky-rts/glue/python/env/scenarios/: tower_example.py
backends/sky-rts/glue/python/protos/: sky_rts_pb2.py
backends/sky-rts/glue/python/sky_rts/env/: __init__.py  action.py  state.py
backends/sky-rts/glue/python/sky_rts/env/scenarios/: city_attack.py  tower_example.py
backends/sky-rts/glue/python/sky_rts/protos/: __init__.py  sky_rts_pb2.py
backends/sky-rts/lua/: better_tower.lua  city_attack.lua  multi_step.lua  random_towers.lua  tower_example.lua
backends/sky-rts/lua/city_attack_static/: attack_enemy.lua
backends/sky-rts/src/: lib.rs  protos.rs
backends/sky-rts/src/engine/: mod.rs
backends/sky-rts/src/engine/components/: collision.rs  mod.rs  move_component.rs  sensor.rs
backends/sky-rts/src/engine/resources/: collision.rs  mod.rs  unit_type.rs
backends/sky-rts/src/engine/systems/: attack.rs  cleanup.rs  collision.rs  input.rs  mod.rs  movement.rs  proto_render.rs  spawn.rs  state.rs
backends/sky-rts/src/engine/systems/lua/: mod.rs  userdata.rs
backends/sky-rts/src/engine/systems/serde/: component_impls.rs  de.rs  de_collision.rs  mod.rs  ser.rs
backends/sky-rts/src/util/: mod.rs
ci/: gen_protos.py
common_protos/: cfg.proto  scaii.proto  universal_messages.proto  viz.proto
core/: .gitignore  Cargo.toml  build.rs  test_questions.txt
core/src/: c_api.rs  lib.rs  scaii_config.rs  util.rs
core/src/internal/: agent.rs  backend.rs  frontend.rs  mod.rs  module.rs  router.rs  rust_ffi.rs
core/src/internal/recorder/: mod.rs  test.rs  test_util.rs
core/src/internal/replay/: explanations.rs  main.rs  no_cache_webserver.py  pkt_util.rs  replay_manager.rs  replay_sequencer.rs  replay_util.rs  study_util.rs  test.rs  test_util.rs  webserver.rs
core/src/internal/replay/study_util/: mod.rs  qna.rs  qna_bnf.lalrpop
core/src/internal/replay/study_util/tests/: ex.qna  mod.rs
core/src/internal/replay_webserver/: main.rs
core/src/internal/rpc/: mod.rs  test.rs
core/src/internal/static_backends/: mod.rs
demos/: random_towers.py  record_agent.py  tower_agent.py
game_wrapper/python/env/: __init__.py  state.py
glue/python/: __init__.py  test.py
glue/python/scaii/: __init__.py
protos/: scaii.proto  sky-rts.proto  viz.proto
replays/: README.md  answers_9181306_0.txt  studyQuestionFileFormat.txt
replays/city-attack-v1/: candidate.scr  candidate_1.scr  candidate_10.scr  candidate_11.scr  candidate_12.scr  candidate_13.scr  candidate_14.scr  candidate_15.scr  candidate_16.scr  candidate_17.scr  candidate_18.scr  candidate_19.scr  candidate_2.scr  candidate_21.scr  candidate_22.scr  candidate_23.scr  candidate_3.scr  candidate_4.scr  candidate_5.scr  candidate_6.scr  candidate_7.scr  candidate_8.scr  candidate_9.scr
replays/city-attack-v2/: candidate_1.scr  candidate_5.scr
replays/city-attack-v4-Jed/: MainTask_answers_0_0.txt  MainTask_questions_0_0.txt  tutorial_answers_0_0.txt  tutorial_questions_0_0.txt
replays/city-attack-v5-Jed/: MainTask_questions_0_3.txt  tutorial_questions_0_3.txt
replays/darpa_demo_replays/multistep/: fulltrain7.scr  untrained_contrastive.scr
replays/darpa_demo_replays/scaii_defs_0_9_0/: replay_0413.scr  replay_eb_0.scr  (+2 more)
replays/iui_study/: iuiStudyReplayFilesInfo.txt
replays/multi_step/: full_train_contrastive.scr  replay_contrastive_trained.scr  replay_not_contrastive.scr  replay_not_contrastive_untrained.scr  replay_untrained_contrastive.scr
replays/multistep/: fulltrain7.scr  halftrain2.scr  supertrain3.scr  supertrain4.scr  untrained_contrastive.scr
replays/scaii_defs_0_9_0/: replay_contrastive_eb_1.scr  replay_eb0_0413.scr  replay_eb_1.scr
router/: .gitignore  Cargo.toml  build.rs
router/src/: lib.rs
scaii/: Cargo.toml
scaii/src/: main.rs
scaii_defs/: .gitignore  Cargo.toml  build.rs
scaii_defs/src/: errors.rs  lib.rs
tools/replay-conv/: Cargo.toml
tools/replay-conv/src/: main.rs
tools/replay-conv/src/legacy/: mod.rs
tools/replay-conv/src/legacy/replay_0_0_1/: de.rs  mod.rs
tools/reward-fixer/: Cargo.toml
util/replay-fix/: Cargo.toml
util/replay-fix/src/: main.rs
viz/: gen_protos.ps1  gen_protos.sh  index.html  setup_deps.ps1  setup_deps.sh
viz/css/: explanations.css  game.css  gameControls.css  majorContainers.css  tabs.css
viz/js/: .gitignore  chart.js  comms.js  drawEntities.js  gameState.js  logTemplates.js  logUtils.js  navigation.js  protobufUtils.js  questionAccessManager.js  renderEntities.js  renderExplanation.js  renderUtils.js  saliency.js  scaiiViz.js  session.js  stateMonitor.js  studyQuestions.js  studyQuestionsEntities.js  studyQuestionsIndexManager.js  studyQuestionsRenderer.js  studyTabs.js  studyTreatment.js  toolTips.js  ui.js  userActionMonitor.js  vizProto.js  vizProtos.js  vizProtos.js.js  zoomBox.js
(+100 files in other folders)
