[package]
name = "backend"
version = "0.1.0"
authors = ["Zoe Juozapaitis <Jragonmiris@gmail.com>"]

[lib]
crate-type = ["dylib", "rlib"]

[dependencies]
scaii_defs = {version="0.5", git = "https://github.com/SCAII/SCAII", branch="reward_types"}
rlua  = "0.9"
serde = "1"
serde_derive = "1"
# My rand patch, change this when it gets merged into rand
rand = { version="0.4", git = 'https://github.com/LinearZoetrope/rand', branch="serde", features=["serde-1"] }
# replace when bincode hits 1.0
bincode = {version="0.9"}
# we need saveload. Fix this when specs hits 0.11
specs = { version="0.10", features=["serde"], git="https://github.com/LinearZoetrope/specs"}
specs-derive = { git="https://github.com/slide-rs/specs" }
shred = "0.5"
shred-derive = "0.3"

prost = "0.2"
prost-derive = "0.2"
bytes = "0.4.5"

lazy_static = "1.0"
ndarray = {version="0.11", features=["serde-1"]}

nalgebra = {version="0.14", features=["serde-serialize"]}
ncollide = "0.14"

rayon = "0.9.0"

[build-dependencies]
prost-build = "0.2"
glob = "0.2.11"

[dev-dependencies]
websocket = "0.20"
