[package]
name = "backend"
version = "0.1.0"
authors = ["Zoe Juozapaitis <Jragonmiris@gmail.com>"]

[lib]
crate-type = ["dylib", "rlib"]

[dependencies]
scaii_defs = {version="0.6", git = "https://github.com/SCAII/SCAII", branch="integ"}
rlua  = "0.9"
serde = "1"
serde_derive = "1"

rand = { version="0.4", features=["serde-1"] }

serde_cbor  = "0.8"

specs = { version="0.10", features=["serde"]}
specs-derive = { git="https://github.com/slide-rs/specs" }
shred = "0.5"
shred-derive = "0.3"

prost = "0.2"
prost-derive = "0.2"
bytes = "0.4.5"

lazy_static = "1.0"
ndarray = {version="0.11", features=["serde-1"]}

nalgebra = {version="0.14", features=["serde-serialize"]}
ncollide = "0.14"

rayon = "1"

[build-dependencies]
prost-build = "0.2"
glob = "0.2.11"

[dev-dependencies]
websocket = "0.20"

[patch.crates-io]
rand = {version="0.4", git = 'https://github.com/rust-lang-nursery/rand', features=["serde-1"], rev="1591eadd954"}
specs = { version="0.10", features=["serde"], git="https://github.com/LinearZoetrope/specs"}
