[package]
name = "scaii-core"
version = "0.1.0"
authors = ["Zoe Juozapaitis <jragonmiris@gmail.com>"]

[features]
default = ["c_api"]

c_api = []
rust_api = []

[lib]
crate-type = ["cdylib","rlib"]

[[bin]]
name = "replay"
path = "src/internal/replay/main.rs"
test = true
doc = true
harness = true

[dependencies]
libloading="0.4.1"
prost = "0.2"
libc = "0.2"
lazy_static = "0.2"
websocket="0.20"
serde = "1"
serde_derive="1"
"bincode"= "0.9.2"
url = "1.5.1"
toml = "0.4.5"

# local deps
scaii_defs = {version="0.2", path = "../scaii_defs"}

[profile.release]
#We can't unwind over C boundaries
panic = "abort"