[package]
name = "scaii-core"
version = "0.1.0"
authors = ["Zoe Juozapaitis <jragonmiris@gmail.com>"]

[features]
default = ["c-api", "static-backends"]
static-backends = ["static-rts"]
static-rts = ["sky-rts"]

c-api = []

[lib]
crate-type = ["cdylib","rlib"]

[[bin]]
name = "replay"
path = "src/internal/replay/main.rs"
test = true
doc = true
harness = true

[dependencies]
prost = "0.3"
libc = "0.2"
websocket="0.20"
serde = "1"
serde_derive="1"
bincode = "0.9.2"
url = "1.5.1"
toml = "0.4.5"

# local deps
scaii_defs = {path = "../scaii_defs"}
sky-rts = {path="../backends/sky-rts", optional = true}
