[package]
name = "replay-conv"
version = "0.1.0"
authors = ["Zoe Juozapaitis <jragonmiris@gmail.com>"]

[dependencies]
serde = "1"
serde_derive = "1"

serde_cbor  = "0.8"

rand = { git = 'https://github.com/rust-lang-nursery/rand', features=["serde-1"], rev="1591eadd954" }

specs = { version="0.10", features=["serde"], git="https://github.com/LinearZoetrope/specs"}
specs-derive = { git="https://github.com/slide-rs/specs" }
shred = "0.5"
shred-derive = "0.3"

prost = "0.3"
bytes = "0.4.5"

sky-rts = {path="../../backends/sky-rts"}
